--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "-": "^0.0.1",
     "@octokit/rest": "^20.0.2",
     "axios": "^1.6.7",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "firebase-admin": "^12.0.0",
